--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "bw-task",
+  "name": "browzwear-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vitalkar.github.io/bw-task",
   "dependencies": {
     "flux": "^3.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "homepage": "https://vitalkar.github.io/bw-task"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -15,7 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
